added apim custom key format
