# openapi/openapi_core.json
@@ -33,6 +33,25 @@
           }
         } ],
         "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/AuthorizationList"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "429" : {
+            "description" : "Too many requests"
+          },
           "404" : {
             "description" : "Not found",
             "content" : {
@@ -43,31 +62,12 @@
               }
             }
           },
-          "429" : {
-            "description" : "Too many requests"
-          },
-          "401" : {
-            "description" : "Unauthorized"
-          },
-          "403" : {
-            "description" : "Forbidden"
-          },
           "500" : {
             "description" : "Service unavailable",
             "content" : {
               "application/json" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/AuthorizationList"
                 }
               }
             }
@@ -101,6 +101,25 @@
           "required" : true
         },
         "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/AuthorizationList"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "429" : {
+            "description" : "Too many requests"
+          },
           "404" : {
             "description" : "Not found",
             "content" : {
@@ -111,31 +130,12 @@
               }
             }
           },
-          "429" : {
-            "description" : "Too many requests"
-          },
-          "401" : {
-            "description" : "Unauthorized"
-          },
-          "403" : {
-            "description" : "Forbidden"
-          },
           "500" : {
             "description" : "Service unavailable",
             "content" : {
               "application/json" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/AuthorizationList"
                 }
               }
             }
@@ -157,8 +157,29 @@
           "schema" : {
             "type" : "string"
           }
+        }, {
+          "name" : "customKeyFormat",
+          "in" : "query",
+          "description" : "Custom key for cache used by APIM",
+          "required" : false,
+          "schema" : {
+            "type" : "string",
+            "default" : ""
+          }
         } ],
         "responses" : {
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "429" : {
+            "description" : "Too many requests"
+          },
+          "200" : {
+            "description" : "OK"
+          },
           "404" : {
             "description" : "Not found",
             "content" : {
@@ -168,18 +189,6 @@
                 }
               }
             }
-          },
-          "429" : {
-            "description" : "Too many requests"
-          },
-          "401" : {
-            "description" : "Unauthorized"
-          },
-          "200" : {
-            "description" : "OK"
-          },
-          "403" : {
-            "description" : "Forbidden"
           },
           "500" : {
             "description" : "Service unavailable",
@@ -220,20 +229,20 @@
           }
         } ],
         "responses" : {
-          "429" : {
-            "description" : "Too many requests"
-          },
           "401" : {
             "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "429" : {
+            "description" : "Too many requests"
           },
           "200" : {
             "description" : "OK",
             "content" : {
               "application/json" : { }
             }
-          },
-          "403" : {
-            "description" : "Forbidden"
           },
           "500" : {
             "description" : "Service unavailable",
@@ -296,8 +305,15 @@
           }
         } ],
         "responses" : {
-          "429" : {
-            "description" : "Too many requests"
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/AuthorizationList"
+                }
+              }
+            }
           },
           "401" : {
             "description" : "Unauthorized"
@@ -305,22 +321,15 @@
           "403" : {
             "description" : "Forbidden"
           },
+          "429" : {
+            "description" : "Too many requests"
+          },
           "500" : {
             "description" : "Service unavailable",
             "content" : {
               "application/json" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/AuthorizationList"
                 }
               }
             }
@@ -345,27 +354,8 @@
           "required" : true
         },
         "responses" : {
-          "429" : {
-            "description" : "Too many requests"
-          },
-          "401" : {
-            "description" : "Unauthorized"
-          },
           "409" : {
             "description" : "Conflict",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "403" : {
-            "description" : "Forbidden"
-          },
-          "500" : {
-            "description" : "Service unavailable",
             "content" : {
               "application/json" : {
                 "schema" : {
@@ -383,6 +373,25 @@
                 }
               }
             }
+          },
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "429" : {
+            "description" : "Too many requests"
+          },
+          "500" : {
+            "description" : "Service unavailable",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
+                }
+              }
+            }
           }
         },
         "security" : [ {
@@ -396,11 +405,11 @@
         "summary" : "Return OK if application is started",
         "operationId" : "healthCheck",
         "responses" : {
-          "429" : {
-            "description" : "Too many requests"
-          },
           "401" : {
             "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
           },
           "400" : {
             "description" : "Bad Request",
@@ -412,18 +421,8 @@
               }
             }
           },
-          "403" : {
-            "description" : "Forbidden"
-          },
-          "500" : {
-            "description" : "Service unavailable",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
+          "429" : {
+            "description" : "Too many requests"
           },
           "200" : {
             "description" : "OK",
@@ -431,6 +430,16 @@
               "application/json" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/AppInfo"
+                }
+              }
+            }
+          },
+          "500" : {
+            "description" : "Service unavailable",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ProblemJson"
                 }
               }
             }
@@ -471,13 +480,25 @@
             "type" : "boolean",
             "default" : true
           }
+        }, {
+          "name" : "customKeyFormat",
+          "in" : "query",
+          "description" : "Custom key for cache used by APIM",
+          "required" : false,
+          "schema" : {
+            "type" : "string",
+            "default" : ""
+          }
         } ],
         "responses" : {
-          "429" : {
-            "description" : "Too many requests"
-          },
           "401" : {
             "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "429" : {
+            "description" : "Too many requests"
           },
           "200" : {
             "description" : "OK",
@@ -488,9 +509,6 @@
                 }
               }
             }
-          },
-          "403" : {
-            "description" : "Forbidden"
           },
           "500" : {
             "description" : "Service unavailable",
@@ -523,6 +541,25 @@
           }
         } ],
         "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/AuthorizationList"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "429" : {
+            "description" : "Too many requests"
+          },
           "404" : {
             "description" : "Not found",
             "content" : {
@@ -533,31 +570,12 @@
               }
             }
           },
-          "429" : {
-            "description" : "Too many requests"
-          },
-          "401" : {
-            "description" : "Unauthorized"
-          },
-          "403" : {
-            "description" : "Forbidden"
-          },
           "500" : {
             "description" : "Service unavailable",
             "content" : {
               "application/json" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/AuthorizationList"
                 }
               }
             }
@@ -715,28 +733,6 @@
         },
         "description" : "The information about the owner of the authorization. These information are required in order to make maintenance easier and performs some kind of search operations."
       },
-      "ProblemJson" : {
-        "type" : "object",
-        "properties" : {
-          "title" : {
-            "type" : "string",
-            "description" : "A short, summary of the problem type. Written in english and readable for engineers (usually not suited for non technical stakeholders and not localized); example: Service Unavailable"
-          },
-          "status" : {
-            "maximum" : 600,
-            "minimum" : 100,
-            "type" : "integer",
-            "description" : "The HTTP status code generated by the origin server for this occurrence of the problem.",
-            "format" : "int32",
-            "example" : 200
-          },
-          "detail" : {
-            "type" : "string",
-            "description" : "A human readable explanation specific to this occurrence of the problem.",
-            "example" : "There was an error processing the request"
-          }
-        }
-      },
       "AuthorizationList" : {
         "required" : [ "authorizations", "page_info" ],
         "type" : "object",
@@ -779,6 +775,28 @@
           }
         },
         "description" : "The information related to the paginated results."
+      },
+      "ProblemJson" : {
+        "type" : "object",
+        "properties" : {
+          "title" : {
+            "type" : "string",
+            "description" : "A short, summary of the problem type. Written in english and readable for engineers (usually not suited for non technical stakeholders and not localized); example: Service Unavailable"
+          },
+          "status" : {
+            "maximum" : 600,
+            "minimum" : 100,
+            "type" : "integer",
+            "description" : "The HTTP status code generated by the origin server for this occurrence of the problem.",
+            "format" : "int32",
+            "example" : 200
+          },
+          "detail" : {
+            "type" : "string",
+            "description" : "A human readable explanation specific to this occurrence of the problem.",
+            "example" : "There was an error processing the request"
+          }
+        }
       },
       "AppInfo" : {
         "type" : "object",
