# src/main/java/it/gov/pagopa/authorizer/config/controller/CachedAuthorizationController.java
@@ -59,8 +59,10 @@ public class CachedAuthorizationController {
       @Parameter(description = "The identifier of the authorizations' owner.")
       @RequestParam(value = "ownerId", required = false) String ownerId,
       @Parameter(description = "The identifier of the authorizations' owner.")
-      @RequestParam(value = "formatTTL", required = false, defaultValue = "true") Boolean formatTTL) {
-    return ResponseEntity.ok(authorizationService.getCachedAuthorization(domain, ownerId, formatTTL == null || formatTTL));
+      @RequestParam(value = "formatTTL", required = false, defaultValue = "true") Boolean formatTTL,
+      @Parameter(description = "Custom key for cache used by APIM")
+      @RequestParam(value = "customKeyFormat", required = false, defaultValue = "") String customKeyFormat) {
+    return ResponseEntity.ok(authorizationService.getCachedAuthorization(domain, ownerId, formatTTL == null || formatTTL, customKeyFormat));
   }
 
 
